test/classes/generic/badFieldExprs/bad-default-expr.type.good
bad-default-expr.chpl:24: In function 'main':
bad-default-expr.chpl:26: error: error while resolving type 'borrowed BadTypeDefault?()'
bad-default-expr.chpl:13: note: type field 'T' has a default expression that does not resolve to a type
